Describe what you changed

--- a/about.html
+++ b/about.html
@@ -9,7 +9,6 @@
     <title>Aniket Patwa</title>
     <link href="style.css" rel="stylesheet" />
     <script src="main.js" defer></script>
-    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </head>
 
 <body>
@@ -18,14 +17,14 @@
             <li class="nav-item" data-page="index.html">
                 <a href="index.html">Home</a>
             </li>
+            <li class="nav-item" data-page="about.html">
+                <a href="about.html">About</a>
+            </li>
             <li class="nav-item" data-page="portfolio.html">
                 <a href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item" data-page="blog.html">
                 <a href="blog.html">Blog</a>
-            </li>
-            <li class="nav-item" data-page="about.html">
-                <a href="about.html">About</a>
             </li>
             <li class="nav-item" data-page="contact.html">
                 <a href="contact.html">Contact</a>
@@ -42,13 +41,48 @@
             <p>I am a Computer Science postgraduate from the <strong>University of Allahabad</strong>.
                 I enjoy building systems that are simple, reliable, and meaningful in real use.
                 My interests lie in <strong>Web Development, System Design, and Artificial Intelligence</strong>.
-                Especially how software can be designed so that it remains easy to understand, scale, and maintain over
+                Especially how software can be designed so that it remains easy to understand, scalable, and maintained
+                over
                 time.
 
                 Right now, I am focusing on improving my development workflow, building practical projects,
                 and studying how real-world systems are structured under the hood.
 
             </p>
+        </section>
+
+        <section class="hobbies-section">
+            <h2>Hobbies & Interests</h2>
+            <ul class="hobbies">
+
+                <li>
+                    <h4>Photography</h4>
+                    <p>I read somewhere that <strong>Photography</strong> has the ability to stop time and capture
+                        moments that tell a story.</p>
+                    <section class="photo-preview">
+                        <figure class="photography">
+                            <img src="/images/P1.webp" alt="">
+                            <figcaption>📍Taj Mahal - Agra, 2022</figcaption>
+                        </figure>
+
+                        <figure class="photography">
+                            <img src="/images/P2.webp" alt="">
+                            <figcaption>📍Nathatop - Jammu, 2024</figcaption>
+                        </figure>
+
+                        <figure class="photography">
+                            <img src="/images/P3.webp" alt="">
+                            <figcaption>📍Varanasi, 2023</figcaption>
+                        </figure>
+
+                        <figure class="photography">
+                            <img src="/images/P4.webp" alt="">
+                            <figcaption>📍Shiv Khori - Jammu, 2024</figcaption>
+                        </figure>
+                    </section>
+                </li>
+
+            </ul>
         </section>
     </main>
 </body>
