--- a/contact.html
+++ b/contact.html
@@ -17,14 +17,14 @@
             <li class="nav-item" data-page="index.html">
                 <a href="index.html">Home</a>
             </li>
+            <li class="nav-item" data-page="about.html">
+                <a href="about.html">About</a>
+            </li>
             <li class="nav-item" data-page="portfolio.html">
                 <a href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item" data-page="blog.html">
                 <a href="blog.html">Blog</a>
-            </li>
-            <li class="nav-item" data-page="about.html">
-                <a href="about.html">About</a>
             </li>
             <li class="nav-item" data-page="contact.html">
                 <a href="contact.html">Contact</a>
@@ -41,22 +41,22 @@
 
             <div class="social-card">
                 <img src="images/instagram_icon.svg" alt="Instagram Logo" class="social-icon">
-                <a href="https://instagram.com/iamaniketpatwa" target="_blank">My Instagram Account</a>
+                <a href="https://instagram.com/iamaniketpatwa" target="_blank">iamaniketpatwa</a>
             </div>
 
             <div class="social-card">
                 <img src="images/github_icon.svg" alt="GitHub Logo" class="social-icon">
-                <a href="https://github.com/iamaniketpatwa" target="_blank">My GitHub Profile</a>
+                <a href="https://github.com/iamaniketpatwa" target="_blank">iamaniketpatwa</a>
             </div>
 
             <div class="social-card">
                 <img src="images/linkedin_icon.svg" alt="LinkedIn Logo" class="social-icon">
-                <a href="https://www.linkedin.com/in/iamaniketpatwa" target="_blank">My LinkedIn Profile</a>
+                <a href="https://www.linkedin.com/in/iamaniketpatwa" target="_blank">in/iamaniketpatwa</a>
             </div>
 
             <div class="social-card">
                 <img src="images/email_icon.svg" alt="Email Icon" class="social-icon">
-                <a href="mailto:iamaniketpatwa@gmail.com">My Email</a>
+                <a href="mailto:iamaniketpatwa@gmail.com">iamaniketpatwa@gmail.com</a>
             </div>
 
         </section>
