--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             <li class="nav-item" data-page="index.html">
                 <a href="index.html">Home</a>
             </li>
+            <li class="nav-item" data-page="about.html">
+                <a href="about.html">About</a>
+            </li>
             <li class="nav-item" data-page="portfolio.html">
                 <a href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item" data-page="blog.html">
                 <a href="blog.html">Blog</a>
-            </li>
-            <li class="nav-item" data-page="about.html">
-                <a href="about.html">About</a>
             </li>
             <li class="nav-item" data-page="contact.html">
                 <a href="contact.html">Contact</a>
@@ -38,11 +38,34 @@
 
     <main>
         <!-- Main content for the Home page -->
-        <section id="home" class="section">
+        <section id="home" class="section hero">
             <h2 class="subtitle">Portfolio of Progress, Blog of Learning</h2>
             <div class="spacer"></div> <!-- Spacer to separate elements -->
             <div class="name-box">
                 <h1 class="name">Aniket Patwa</h1>
+            </div>
+        </section>
+
+        <section class="photo-row">
+            <figure class="photo">
+                <img src="/images/M1.webp" alt="">
+                <figcaption>📍Allahabad, 2025</figcaption>
+            </figure>
+
+            <figure class="photo">
+                <img src="/images/M2.webp" alt="">
+                <figcaption>📍Allahabad University, 2022</figcaption>
+            </figure>
+
+            <figure class="photo">
+                <img src="/images/M3.webp" alt="">
+                <figcaption>📍Holland Hall Hostel, 2024</figcaption>
+            </figure>
+
+            <figure class="photo">
+                <img src="/images/M4.webp" alt="">
+                <figcaption>📍Nathatop, 2024</figcaption>
+            </figure>
         </section>
     </main>
 </body>
