--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta name="view-transition" content="same-origin" />
     <meta charset="UTF-8" />
@@ -9,11 +10,15 @@
     <link href="style.css" rel="stylesheet" />
     <script src="main.js" defer></script>
 </head>
+
 <body>
     <nav id="sidebar">
         <ul class="nav-list">
             <li class="nav-item" data-page="index.html">
                 <a href="index.html">Home</a>
+            </li>
+            <li class="nav-item" data-page="about.html">
+                <a href="about.html">About</a>
             </li>
             <li class="nav-item" data-page="portfolio.html">
                 <a href="portfolio.html">Portfolio</a>
@@ -21,19 +26,20 @@
             <li class="nav-item" data-page="blog.html">
                 <a href="blog.html">Blog</a>
             </li>
-            <li class="nav-item" data-page="about.html">
-                <a href="about.html">About</a>
-            </li>
             <li class="nav-item" data-page="contact.html">
                 <a href="contact.html">Contact</a>
             </li>
         </ul>
     </nav>
     <button id="toggleButton" class="toggle-button">☰</button>
-    
+
     <main>
         <!-- Main content for the Blog page -->
         <h1>Blog</h1>
+        <section>
+            <h5>Working on it...</h5>
+        </section>
     </main>
 </body>
+
 </html>
