Added YouTube Channel Link in Contact and reduced padding in About paragraph

--- a/about.html
+++ b/about.html
@@ -40,12 +40,12 @@
 
             <p>I am a Computer Science postgraduate from the <strong>University of Allahabad</strong>.
                 I enjoy building systems that are simple, reliable, and meaningful in real use.
-                My interests lie in <strong>Web Development, System Design, and Artificial Intelligence</strong>.
-                Especially how software can be designed so that it remains easy to understand, scalable, and maintained
+                My interests lie in <strong>Web Development</strong>, <strong>System Design</strong> and
+                <strong>Artificial Intelligence</strong>.</p>
+            <p>Especially how software can be designed so that it remains easy to understand, scalable, and maintained
                 over
-                time.
-
-                Right now, I am focusing on improving my development workflow, building practical projects,
+                time.</p>
+            <p>Right now, I am focusing on improving my development workflow, building practical projects,
                 and studying how real-world systems are structured under the hood.
 
             </p>
