--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,11 @@
                 <a href="mailto:iamaniketpatwa@gmail.com">iamaniketpatwa@gmail.com</a>
             </div>
 
+            <div class="social-card">
+                <img src="images/youtube_icon.svg" alt="YouTube Icon" class="social-icon">
+                <a href="https://www.youtube.com/@iamaniketpatwa" target="_blank">iamaniketpatwa</a>
+            </div>
+
         </section>
 
 
