Changes in File Path and Links

--- a/Contact/index.html
+++ b/Contact/index.html
@@ -7,27 +7,27 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aniket Patwa</title>
-    <link href="style.css" rel="stylesheet" />
-    <script src="main.js" defer></script>
+    <link href="/style.css" rel="stylesheet" />
+    <script src="/main.js" defer></script>
 </head>
 
 <body>
     <nav id="sidebar">
         <ul class="nav-list">
             <li class="nav-item" data-page="index.html">
-                <a href="index.html">Home</a>
+                <a href="/">Home</a>
             </li>
             <li class="nav-item" data-page="about.html">
-                <a href="about.html">About</a>
+                <a href="/About">About</a>
             </li>
             <li class="nav-item" data-page="portfolio.html">
-                <a href="portfolio.html">Portfolio</a>
+                <a href="/Portfolio">Portfolio</a>
             </li>
             <li class="nav-item" data-page="blog.html">
-                <a href="blog.html">Blog</a>
+                <a href="/Blog">Blog</a>
             </li>
             <li class="nav-item" data-page="contact.html">
-                <a href="contact.html">Contact</a>
+                <a href="/Contact">Contact</a>
             </li>
         </ul>
     </nav>
@@ -40,27 +40,27 @@
             <h2>Let’s connect. Reach out anytime.</h2>
 
             <div class="social-card">
-                <img src="images/instagram_icon.svg" alt="Instagram Logo" class="social-icon">
+                <img src="/images/instagram_icon.svg" alt="Instagram Logo" class="social-icon">
                 <a href="https://instagram.com/iamaniketpatwa" target="_blank">iamaniketpatwa</a>
             </div>
 
             <div class="social-card">
-                <img src="images/github_icon.svg" alt="GitHub Logo" class="social-icon">
+                <img src="/images/github_icon.svg" alt="GitHub Logo" class="social-icon">
                 <a href="https://github.com/iamaniketpatwa" target="_blank">iamaniketpatwa</a>
             </div>
 
             <div class="social-card">
-                <img src="images/linkedin_icon.svg" alt="LinkedIn Logo" class="social-icon">
+                <img src="/images/linkedin_icon.svg" alt="LinkedIn Logo" class="social-icon">
                 <a href="https://www.linkedin.com/in/iamaniketpatwa" target="_blank">in/iamaniketpatwa</a>
             </div>
 
             <div class="social-card">
-                <img src="images/email_icon.svg" alt="Email Icon" class="social-icon">
+                <img src="/images/email_icon.svg" alt="Email Icon" class="social-icon">
                 <a href="mailto:iamaniketpatwa@gmail.com">iamaniketpatwa@gmail.com</a>
             </div>
 
             <div class="social-card">
-                <img src="images/youtube_icon.svg" alt="YouTube Icon" class="social-icon">
+                <img src="/images/youtube_icon.svg" alt="YouTube Icon" class="social-icon">
                 <a href="https://www.youtube.com/@iamaniketpatwa" target="_blank">iamaniketpatwa</a>
             </div>
 
