--- a/About/index.html
+++ b/About/index.html
@@ -7,27 +7,27 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aniket Patwa</title>
-    <link href="style.css" rel="stylesheet" />
-    <script src="main.js" defer></script>
+    <link href="/style.css" rel="stylesheet" />
+    <script src="/main.js" defer></script>
 </head>
 
 <body>
     <nav id="sidebar">
         <ul class="nav-list">
             <li class="nav-item" data-page="index.html">
-                <a href="index.html">Home</a>
+                <a href="/">Home</a>
             </li>
             <li class="nav-item" data-page="about.html">
-                <a href="about.html">About</a>
+                <a href="/About">About</a>
             </li>
             <li class="nav-item" data-page="portfolio.html">
-                <a href="portfolio.html">Portfolio</a>
+                <a href="/Portfolio">Portfolio</a>
             </li>
             <li class="nav-item" data-page="blog.html">
-                <a href="blog.html">Blog</a>
+                <a href="/Blog">Blog</a>
             </li>
             <li class="nav-item" data-page="contact.html">
-                <a href="contact.html">Contact</a>
+                <a href="/Contact">Contact</a>
             </li>
         </ul>
     </nav>
@@ -41,7 +41,8 @@
             <p>I am a Computer Science postgraduate from the <strong>University of Allahabad</strong>.
                 I enjoy building systems that are simple, reliable, and meaningful in real use.
                 My interests lie in <strong>Web Development</strong>, <strong>System Design</strong> and
-                <strong>Artificial Intelligence</strong>.</p>
+                <strong>Artificial Intelligence</strong>.
+            </p>
             <p>Especially how software can be designed so that it remains easy to understand, scalable, and maintained
                 over
                 time.</p>
