--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
     <nav id="sidebar">
         <ul class="nav-list">
             <li class="nav-item" data-page="index.html">
-                <a href="index.html">Home</a>
+                <a href="/">Home</a>
             </li>
             <li class="nav-item" data-page="about.html">
-                <a href="about.html">About</a>
+                <a href="/About">About</a>
             </li>
             <li class="nav-item" data-page="portfolio.html">
-                <a href="portfolio.html">Portfolio</a>
+                <a href="/Portfolio">Portfolio</a>
             </li>
             <li class="nav-item" data-page="blog.html">
-                <a href="blog.html">Blog</a>
+                <a href="/Blog">Blog</a>
             </li>
             <li class="nav-item" data-page="contact.html">
-                <a href="contact.html">Contact</a>
+                <a href="/Contact">Contact</a>
             </li>
         </ul>
     </nav>
